; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvmem/extr_meson-mx-efuse.c_meson_mx_efuse_hw_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvmem/extr_meson-mx-efuse.c_meson_mx_efuse_hw_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.meson_mx_efuse = type { i32 }

@MESON_MX_EFUSE_CNTL1 = common dso_local global i32 0, align 4
@MESON_MX_EFUSE_CNTL1_PD_ENABLE = common dso_local global i32 0, align 4
@MESON_MX_EFUSE_CNTL4 = common dso_local global i32 0, align 4
@MESON_MX_EFUSE_CNTL4_ENCRYPT_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.meson_mx_efuse*)* @meson_mx_efuse_hw_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @meson_mx_efuse_hw_enable(%struct.meson_mx_efuse* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.meson_mx_efuse*, align 8
  %4 = alloca i32, align 4
  store %struct.meson_mx_efuse* %0, %struct.meson_mx_efuse** %3, align 8
  %5 = load %struct.meson_mx_efuse*, %struct.meson_mx_efuse** %3, align 8
  %6 = getelementptr inbounds %struct.meson_mx_efuse, %struct.meson_mx_efuse* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @clk_prepare_enable(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* %2, align 4
  br label %22

13:                                               ; preds = %1
  %14 = load %struct.meson_mx_efuse*, %struct.meson_mx_efuse** %3, align 8
  %15 = load i32, i32* @MESON_MX_EFUSE_CNTL1, align 4
  %16 = load i32, i32* @MESON_MX_EFUSE_CNTL1_PD_ENABLE, align 4
  %17 = call i32 @meson_mx_efuse_mask_bits(%struct.meson_mx_efuse* %14, i32 %15, i32 %16, i32 0)
  %18 = load %struct.meson_mx_efuse*, %struct.meson_mx_efuse** %3, align 8
  %19 = load i32, i32* @MESON_MX_EFUSE_CNTL4, align 4
  %20 = load i32, i32* @MESON_MX_EFUSE_CNTL4_ENCRYPT_ENABLE, align 4
  %21 = call i32 @meson_mx_efuse_mask_bits(%struct.meson_mx_efuse* %18, i32 %19, i32 %20, i32 0)
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %13, %11
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @clk_prepare_enable(i32) #1

declare dso_local i32 @meson_mx_efuse_mask_bits(%struct.meson_mx_efuse*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
